force-app/main/default/objects/Performance_Review__c/fields/Goals_Met__c.field-meta.xml
<CustomField>
    <fullName>Goals_Met__c</fullName>
    <label>Goals Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>