force-app/main/default/objects/Performance_Review__c/fields/Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Period__c</fullName>
    <label>Review Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>