force-app/main/default/objects/Performance_Review__c/fields/Total_Goals__c.field-meta.xml
<CustomField>
    <fullName>Total_Goals__c</fullName>
    <label>Total Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>